# LAC

./: .gitignore  3ds.cpp  3ds.h  CMakeLists.txt  DefaultHeightMap.LAC  FlightModel.cpp  KnownBugs.txt  Lac07p64.cbp  Lac07p64.depend  Lac07p64.layout  Lac07p69.cbp  Lac07p69.layout  Lac07p70.cbp  Lac07p70.layout  LacConfig.txt  LacControls.Generic.txt  LacControls.Sidewinder2.txt  LacControls.txt  LacGlobal  Makefile  NetworkApi.cpp  NetworkApi.h  OnlineScoreLog.LAC  README.md  ReadMe.txt  ReadMeSdl2Controls.txt  Sdl2ChangeLog.txt  WhatsNew.txt  aiobject.cpp  aiobject.h  audio.cpp  audio.h  cockpit.cpp  cockpit.h  common.cpp  common.h  conf.cpp  conf.h  config.h  dev_notes.txt  (+35 more)
Optional3dModels/OptimizedForAppearance/: F4U.3ds  F4UYellowNose.3ds  JU87.3ds  P39.3ds  a6m2.3ds  a6m5.3ds
Optional3dModels/OptimizedForPerformance/: F4U.3ds  FIATG55.3ds  FW190.3ds  JU87.3ds  ME109.3ds  ME109F.3ds  MosquitoB.3ds  P39.3ds  SPIT5.3ds  a6m2.3ds  a6m5.3ds  spitfire.3ds
